[package]
name = "radar"
version = "0.1.0"
edition = "2024"

[dependencies]
mc_proxy = { git = "https://github.com/Alezito2008/Minecraft-Proxy.git", branch = "main" }
axum = { version = "0.8.9", features = ["ws"] }
futures-util = "0.3.32"
tokio = { version = "1.51.1", features = ["full"] }
serde_json = "1.0.149"
